--- a/css/index.css
+++ b/css/index.css
@@ -105,7 +105,7 @@ main {
   align-items: center;
   flex-direction: column;
   min-height: 100dvh;
-  background: url(./_static/landingpageimages/background.svg);
+  background: url(../_static/landingpageimages/background.svg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
