--- a/css/index.css
+++ b/css/index.css
@@ -65,20 +65,25 @@ body > * {
 .nav-div {
   height: fit-content;
   width: fit-content;
+  position: fixed;
+  top: 0%;
+  z-index: 15;
 }
 
+#nav-div__topper-bar {
+  margin-top: -30px;
+}
 .nav-div__container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: -14rem;
-  gap: 73rem;
+  margin-top: -12rem;
+  gap: 36rem;
 }
 
 .nav-div__menu-and-logo {
   display: flex;
-  height: fit-content;
-  width: fit-content;
+
 }
 
 .nav-div__cart-and-profile {
@@ -87,29 +92,49 @@ body > * {
 }
 
 .nav-div__container__logo {
-  height: 100px;
-  width: 400px;
+  height: 90px;
+  width: 340px;
 
   flex-shrink: 1;
 }
 
 .nav-div__container__menu-button {
-  height: 100px;
-  width: 100px;
-
+  height: 70px;
+  width: 70px;
+  padding-top: 6px;
+  padding-right: 10px;
   filter: invert(1);
   flex-shrink: 1;
 
 }
 
+.nav-div__container__search {
+  width: 420px;
+  height: 35px;
+  border-radius: 50px;
+  outline-style: solid;
+  outline-color: white;
+  outline-width: 3px;
+  background-color: transparent;
+  text-transform: uppercase;
+  color: white;
+  margin-left: -290px;
+  margin-top: -5px;
+}
+
+.nav-div__container__search::-webkit-input-placeholder {
+  color: white;
+}
+
 .nav-div__container__profile-icon {
-  height: 100px;
+  height: 60px;
   translate: 0%;
   filter: invert(1);
+  padding-right: 2.5rem;
 }
 
 .nav-div__container__cart-icon {
-  height: 100px;
+  height: 60px;
   translate: 0%;
   filter: invert(1);
 }
@@ -167,11 +192,19 @@ html:not([data-scroll="0"]) #view-more {
   pointer-events: none;
 }
 
+
 #slideshow {
   width: 90%;
   position: relative;
+  margin-top: 167px;
   overflow: hidden;
-  margin-top: 130px;
+}
+
+#main-tile-background {
+  height: auto;
+  width: 91%;
+  position: absolute;
+  top: 15.7%;
 }
 #slideshow #content {
   width: 100%;
@@ -233,9 +266,9 @@ html:not([data-scroll="0"]) #view-more {
 }
 
 #items {
-  padding: 50px 0;
+  padding: 30px 0;
   width: 90%;
-  height: 330px;
+  height: auto;
   display: flex;
   justify-content: space-between;
 }
@@ -248,13 +281,13 @@ html:not([data-scroll="0"]) #view-more {
   transform: scale(1.025);
 }
 #items img {
-  height: 100%;
+  height: 27rem;
   width: auto;
 }
 @media screen and (max-width: 1500px) {
   #items img {
-    height: 80%;
-    width: auto;
+    height: 200%;
+    width: 100%;
   }
 }
 @media screen and (max-width: 1170px) {
@@ -275,7 +308,7 @@ html:not([data-scroll="0"]) #view-more {
   }
   #items img {
     padding: 10px;
-    max-width: 600px;
+    max-width: 800px;
     min-width: 95%;
     height: 100%;
     object-fit: cover;
@@ -283,7 +316,7 @@ html:not([data-scroll="0"]) #view-more {
 }
 
 footer {
-  height: 300px;
+  height: 100px;
   width: 100%;
   background: black;
   backdrop-filter: blur(10px);
@@ -291,6 +324,17 @@ footer {
   color: white;
   display: grid;
   place-items: center;
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
+  gap: 80px;
+}
+
+footer a {
+  color: inherit;
+  font-family: "acumin-pro";
+  font-weight: 700;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=index.css.map */
